--- a/src/TimeyWimey/Pages/Index.razor
+++ b/src/TimeyWimey/Pages/Index.razor
@@ -1,8 +1,9 @@
 ﻿@page "/"
+@using TimeyWimey.TimeRegistration;
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<WeekDisplay/>
 
-Welcome to your new app.
+
 
