--- a/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
@@ -6,21 +6,43 @@
     return;
 }
 
-<div class="d-flex" style="height: 70vh">
+<div>
     
-    @foreach (var day in Days)
-    {
-        <div class="px-1 align-content-xl-stretch">
-            <h4 class="day-of-week">@day.DayOfWeek</h4>
-            <p class="date">@day.Date.ToString("M")</p>
-            <svg height="100%" width="100%">
-                <rect height="100%" width="100%" fill="lightgray"/>
+    <div class="flex-row d-flex" style="width: 100%">
+        @foreach (var day in Days)
+        {
+            <div class="px-1 align-content-stretch" style="width: 100%">
+                <h4 class="day-of-week">@day.DayOfWeek</h4>
+                <p class="date">@day.Date.ToString("M")</p>
+            </div>
+        }
+    </div>
+
+    <div class="day-scrollable flex-row d-flex" style="height: 85vh">
+        @foreach(var day in Days)
+        {
+            <svg height="200%" width="100%">
+                <rect height="100%" width="100%" fill="lightgray" class="px-1 align-content-stretch"/>
+                @foreach (int hour in Enumerable.Range(0, 48))
+                {
+                    @if (hour % 2 == 0)
+                    {
+                        <text>
+                            <text class="hour" x="40%" y="@(HourVerticalPosition(hour) -0.1)%">@($"{hour / 2}:00")</text>
+                        </text>
+                    }
+                    double width = hour % 2 == 0 ? 0.3 : 0.1;
+                    <line stroke="black" x1="0%" x2="100%" y1="@(HourVerticalPosition(hour))%"
+                          y2="@(HourVerticalPosition(hour))%" stroke-width="@(width)px"/>
+                }
             </svg>
-        </div>
-    }
+        }
+    </div>
 </div>
 @code {
     public Day[]? Days;
+
+    public double HourVerticalPosition(int hour) => 100.0 / 48 * hour;
 
     protected override void OnInitialized()
     {
