--- a/src/TimeyWimey/TimeRegistration/WeekDisplay.razor.css
+++ b/src/TimeyWimey/TimeRegistration/WeekDisplay.razor.css
@@ -7,3 +7,12 @@
     text-align: center;
     font-size: 0.9rem;
 }
+
+.hour {
+    text-align: center;
+    font-size: 0.9rem;
+}
+
+.day-scrollable {
+    overflow-y: scroll;
+}
