Move the day calendars to their own component

--- a/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
@@ -22,19 +22,8 @@
         @foreach(var day in Days)
         {
             <svg height="200%" width="100%">
-                <rect height="100%" width="100%" fill="lightgray" class="px-1 align-content-stretch"/>
-                @foreach (int hour in Enumerable.Range(0, 48))
-                {
-                    @if (hour % 2 == 0)
-                    {
-                        <text>
-                            <text class="hour" x="40%" y="@(HourVerticalPosition(hour) -0.1)%">@($"{hour / 2}:00")</text>
-                        </text>
-                    }
-                    double width = hour % 2 == 0 ? 0.3 : 0.1;
-                    <line stroke="black" x1="0%" x2="100%" y1="@(HourVerticalPosition(hour))%"
-                          y2="@(HourVerticalPosition(hour))%" stroke-width="@(width)px"/>
-                }
+                <DayDisplay Day="day"></DayDisplay>
+               
             </svg>
         }
     </div>
@@ -42,7 +31,7 @@
 @code {
     public Day[]? Days;
 
-    public double HourVerticalPosition(int hour) => 100.0 / 48 * hour;
+    
 
     protected override void OnInitialized()
     {
