--- a/src/TimeyWimey/TimeRegistration/DayDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/DayDisplay.razor
@@ -1,4 +1,5 @@
 ﻿@using TimeyWimey.Model
+@using System.Text.Unicode
 
 
 <rect height="100%" width="100%" fill="lightgray" class="px-1 align-content-stretch"/>
@@ -10,6 +11,10 @@
             <text class="hour" x="40%" y="@(HourVerticalPosition(hour) -0.1)%">@($"{hour / 2}:00")</text>
         </text>
     }
+    if (hour == 17)
+    {
+        <line stroke-width="0" x1="0" y1="0" x2="0" y2="0" @ref="HourMark" tabindex="0"/>
+    }
     double width = hour % 2 == 0 ? 0.3 : 0.1;
     <line stroke="black" x1="0%" x2="100%" y1="@(HourVerticalPosition(hour))%"
           y2="@(HourVerticalPosition(hour))%" stroke-width="@(width)px"/>
@@ -20,4 +25,5 @@
     public Day? Day { get; set; }
 
     public double HourVerticalPosition(int hour) => 100.0 / 48 * hour;
+    public ElementReference HourMark { get; set; }
 }
