--- a/src/TimeyWimey/TimeRegistration/DayDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/DayDisplay.razor
@@ -2,14 +2,15 @@
 @using System.Text.Unicode
 @inject TimeLineCalculator _lineCalculator;
 
-
 @foreach (int halfHour in Enumerable.Range(0, 48))
 {
+    var time = TimeOnly.MinValue.AddHours(halfHour / 2.0);
+    
     var y = _lineCalculator.HourVerticalPosition(halfHour);
     var height = _lineCalculator.HourVerticalPosition(halfHour + 1) - y;
 
     <rect y="@(y)%" height="@(height)%" width="100%" fill="lightgray" cursor="pointer" 
-          class="align-content-stretch time-chunk"/>
+          class="align-content-stretch time-chunk" @onclick="async args => await CreateChunk(args, time)"/>
     @if (halfHour % 2 == 0)
     {
         <text>
@@ -36,5 +37,22 @@
 
     
     public ElementReference HourMark { get; set; }
+
+    private async Task CreateChunk(MouseEventArgs args, TimeOnly timeOnly)
+    {
+        if (Day == null)
+        {
+            return;
+        }
+        var timeEntry = new TimeEntry
+        {
+            Description = "Description",
+            Title = "Some activity",
+            Start = timeOnly,
+            End = timeOnly.AddHours(0.5)
+        };
+        Day.Entries.Add(timeEntry);
+        Console.WriteLine($"Added entry from {timeEntry.Start} to {timeEntry.End}!");
+    }
 
 }
