--- a/src/TimeyWimey/TimeRegistration/DayDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/DayDisplay.razor
@@ -6,8 +6,8 @@
 {
     var time = TimeOnly.MinValue.AddHours(halfHour / 2.0);
     
-    var y = _lineCalculator.HourVerticalPosition(halfHour);
-    var height = _lineCalculator.HourVerticalPosition(halfHour + 1) - y;
+    var y = _lineCalculator.HourVerticalPosition(time);
+    var height = _lineCalculator.HourVerticalPosition(time.AddHours(0.5).ToTimeSpan()) - y;
 
     <rect y="@(y)%" height="@(height)%" width="100%" fill="lightgray" cursor="pointer" 
           class="align-content-stretch time-chunk" @onclick="async args => await CreateChunk(args, time)"/>
