--- a/src/TimeyWimey/TimeRegistration/TimeEntriesDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntriesDisplay.razor
@@ -10,10 +10,13 @@
 {
     var y = _lineCalculator.HourVerticalPosition(entry.Start);
     var height = _lineCalculator.HourVerticalPosition(entry.End) - y;
+    var textPos = y + (height / 2) + 0.25;
     
-    <rect fill="lightgreen" y="@(y)%" x="0" height="@(height)%" width="100%">
-        
+    <rect fill="lightgreen" y="@(y)%" x="0" height="@(height)%" width="100%" rx="12" ry="12">
     </rect>
+    <text>
+        <text x="5%" y="@(textPos)%" style="font-size: 0.8rem; text-align: center" width="100%">@entry.Title</text>
+    </text>
 }
 
 @code {
