Right align the five day week checkbox

--- a/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
@@ -10,9 +10,9 @@
 }
 
 <div>
-    <div class="flex-row d-flex" style="background: aqua">
-        <label for="fivedayweek">Five day week</label>
-        <input type="checkbox" @bind="FiveDayWeek" style="width: 60px; alignment-baseline: center" id="fivedayweek"/>
+    <div style="display: flex; justify-content: end; align-items: center; width: 100%;">
+        <input type="checkbox" @bind="FiveDayWeek" style="width: 30px; padding: 2px" id="fivedayweek"/>
+        <label for="fivedayweek" style="padding-right: 5px">Five day week</label>
     </div>
 
     <div class="flex-row d-flex" style="width: 100%">
