--- a/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
@@ -18,10 +18,12 @@ var bottom = y + height;
 <text>
     <text x="5%" y="@(textPos)%" style="font-size: 0.8rem; text-align: center; user-select: none;" width="100%">@Entry.Title</text>
 </text>
-<EntryTimeDraggable  @bind-Y="YTop" X="0" SvgElement="@SvgElement" @bind-YPercent="YPercentTop">
+    <EntryTimeDraggable  @bind-Y="YTop" X="0" SvgElement="@SvgElement" @bind-YPercent="YPercentTop"
+                         DragCompleted="TopDragCompleted">
     <rect fill="blue" height="3px" width="100%" y="@(y)%"/>
 </EntryTimeDraggable>
-<EntryTimeDraggable X="0" SvgElement="@SvgElement" @bind-Y="YBottom" @bind-YPercent="YPercentBottom">
+    <EntryTimeDraggable X="0" SvgElement="@SvgElement" @bind-Y="YBottom" @bind-YPercent="YPercentBottom"
+                        DragCompleted="BottomDragCompleted">
     <rect fill="red" x="0" y = "@(bottom)%" height="3px" width="100%"/>A
 </EntryTimeDraggable>
 }
@@ -47,7 +49,7 @@ var bottom = y + height;
         set
         {
             _yPercentTop = value;
-            var start = ClosestHalfHour(_yPercentTop);
+            var start = TimeOnly.FromTimeSpan(TimeSpan.FromMinutes(_yPercentTop * 0.01 * MinutesPerDay));
             if (Entry != null && Entry.Start != start)
             {
                 Entry.Start = start;
@@ -65,7 +67,8 @@ var bottom = y + height;
         set
         {
             _yPercentBottom = value;
-            var end = ClosestHalfHour(_yPercentBottom);
+
+            var end = TimeOnly.FromTimeSpan(TimeSpan.FromMinutes(_yPercentBottom * 0.01 * MinutesPerDay));
             if (Entry != null && Entry.End != end)
             {
                 Entry.End = end;
@@ -77,9 +80,10 @@ var bottom = y + height;
     }
 
 
-    private TimeOnly ClosestHalfHour(double percent)
+    private TimeOnly ClosestHalfHour(TimeOnly time)
     {
-        var minutes = 1440 * (percent * 0.01);
+        var span = time.ToTimeSpan();
+        var minutes = span.TotalMinutes;
         float multiple = 30;
         var roundedToHalfHour = (int)MathF.Round((float)minutes / multiple) * multiple;
         var timespan = TimeSpan.FromMinutes(roundedToHalfHour);
@@ -87,4 +91,8 @@ var bottom = y + height;
         return start;
     }
 
+    private void TopDragCompleted() => Entry!.Start = ClosestHalfHour(Entry.Start);
+    private void BottomDragCompleted() => Entry!.End = ClosestHalfHour(Entry.End);
+
+    private const int MinutesPerDay = 1440;
 }
