Implemented basic persistence of days using Sqlite and Entity Framework Core, based on https://github.com/SteveSandersonMS/BlazeOrbital and https://github.com/thinktecture-labs/article-blazor-sqlite-efcore

--- a/src/TimeyWimey/Pages/Index.razor
+++ b/src/TimeyWimey/Pages/Index.razor
@@ -1,9 +1,20 @@
 ﻿@page "/"
+@inject WimeyDataContext _db;
 @using TimeyWimey.TimeRegistration;
+@using TimeyWimey.Data
+@using Microsoft.EntityFrameworkCore
 
 <PageTitle>Index</PageTitle>
 
 <WeekDisplay/>
 
 
+@code
+{
+    protected override async Task OnInitializedAsync()
+    {
 
+        var days = await _db.Days.ToArrayAsync();
+        await base.OnInitializedAsync();
+    }
+}
