--- a/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
@@ -1,6 +1,8 @@
 @using TimeyWimey.Model
 @using TimeyWimey.Infrastructure
+@using TimeyWimey.Data
 @inject TimeLineCalculator _lineCalculator;
+@inject DataPersistence _persistence;
 
 @if (Day == null)
 {
@@ -19,12 +21,12 @@ var bottom = y + height;
     <text x="50%" y="@(textPos)%" class="entryTitle" width="100%">@Entry.Title</text>
 </text>
     <EntryTimeDraggable  @bind-Y="YTop" X="0" SvgElement="@SvgElement" @bind-YPercent="YPercentTop"
-                         DragCompleted="TopDragCompleted">
+                         DragCompleted="async () => await TopDragCompleted()">
     <rect fill="lightgreen" height="5px" width="100%" y="@(y)%"/>
     <rect fill="black" height="1px" width="100%" y="@(y)%"/>
 </EntryTimeDraggable>
     <EntryTimeDraggable X="0" SvgElement="@SvgElement" @bind-Y="YBottom" @bind-YPercent="YPercentBottom"
-                        DragCompleted="BottomDragCompleted">
+                        DragCompleted="async () => await BottomDragCompleted()">
     <rect fill="lightgreen" x="0" y = "@(bottom)%" height="5px" width="100%"/>A
     <rect fill="black" height="1px" width="100%" y="@(bottom)%"/>
 </EntryTimeDraggable>
@@ -93,7 +95,7 @@ var bottom = y + height;
         return start;
     }
 
-    private void TopDragCompleted()
+    private async Task TopDragCompleted()
     {
         Entry!.Start = ClosestHalfHour(Entry.Start);
         var overlapping = Day!.Entries.FirstOrDefault(
@@ -102,9 +104,13 @@ var bottom = y + height;
         {
             Entry.Start = overlapping.End;
         }
+
+        await Save();
+
+
     }
 
-    private void BottomDragCompleted()
+    private async Task BottomDragCompleted()
     {
         Entry!.End = ClosestHalfHour(Entry.End);
         var overlapping = Day!.Entries.FirstOrDefault(
@@ -113,7 +119,14 @@ var bottom = y + height;
         {
             Entry.End = overlapping.Start;
         }
+        await Save();
     }
 
-        private const int MinutesPerDay = 1440;
+    private const int MinutesPerDay = 1440;
+
+    private async Task Save()
+    {
+        await _persistence.Save(Day!);
+    }
+
 }
