--- a/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/WeekDisplay.razor
@@ -1,6 +1,7 @@
 ﻿@using TimeyWimey.Model
 @using Microsoft.AspNetCore.Components.WebAssembly.Infrastructure
-@inject Calendar _calendar;
+@using TimeyWimey.Data
+@inject DataPersistence _persistence;
 @inject IJSRuntime _jsRuntime;
 
 @if (Days == null)
@@ -45,9 +46,9 @@
 
     public ElementReference ScrollDiv { get; set; }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        _days = _calendar.GetCurrentWeek();
+        _days = await _persistence.GetCurrentWeek();
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
