Can now change the name of entries by clicking on them

--- a/src/TimeyWimey/Shared/MainLayout.razor
+++ b/src/TimeyWimey/Shared/MainLayout.razor
@@ -1,7 +1,8 @@
 ﻿@inherits LayoutComponentBase
+@using MudBlazor;
 
 <div class="page">
-
+    <MudThemeProvider/>
     <main>
         <div class="top-row px-5">
             <NavMenu />
