Can now create activites and assign them to entries

--- a/src/TimeyWimey/Shared/MainLayout.razor
+++ b/src/TimeyWimey/Shared/MainLayout.razor
@@ -3,6 +3,7 @@
 
 <div class="page">
     <MudThemeProvider/>
+    <MudDialogProvider/>
     <main>
         <div class="top-row px-5">
             <NavMenu />
