--- a/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryDisplay.razor
@@ -16,21 +16,21 @@ var height = _lineCalculator.HourVerticalPosition(Entry.End.ToTimeSpan()) - y;
 var textPos = y + (height / 2);
 var bottom = y + height;
 
-    <rect fill="lightgreen" y="@(y)%" x="0" height="@(height)%" width="100%" rx="12" ry="12"
+    <rect fill="@Entry.Color" y="@(y)%" x="0" height="@(height)%" width="100%" rx="12" ry="12"
           style="cursor: pointer" @onclick="e => Menu.Toggle(e)">
 </rect>
-<TimeEntryMenu @ref=@Menu Committed="StateHasChanged" Day="Day" Entry="Entry"/>
+<TimeEntryMenu @ref=@Menu Committed="TimeEntryCommitted" Day="Day" Entry="Entry"/>
 <text>
     <text x="50%" y="@(textPos)%" class="entryTitle" width="100%">@Entry.Title</text>
 </text>
     <EntryTimeDraggable  @bind-Y="YTop" X="0" SvgElement="@SvgElement" @bind-YPercent="YPercentTop"
                          DragCompleted="async () => await TopDragCompleted()">
-    <rect fill="lightgreen" height="5px" width="100%" y="@(y)%"/>
+    <rect fill="@Entry.Color" height="5px" width="100%" y="@(y)%"/>
     <rect fill="black" height="1px" width="100%" y="@(y)%"/>
 </EntryTimeDraggable>
     <EntryTimeDraggable X="0" SvgElement="@SvgElement" @bind-Y="YBottom" @bind-YPercent="YPercentBottom"
                         DragCompleted="async () => await BottomDragCompleted()">
-    <rect fill="lightgreen" x="0" y = "@(bottom)%" height="5px" width="100%"/>A
+    <rect fill="@Entry.Color" x="0" y = "@(bottom)%" height="5px" width="100%"/>A
     <rect fill="black" height="1px" width="100%" y="@(bottom)%"/>
 </EntryTimeDraggable>
 }
@@ -53,6 +53,8 @@ var bottom = y + height;
 
 
     private double _yPercentTop;
+    public TimeEntryMenu? Menu { get; set; }
+
     public double YPercentTop
     {
         get => _yPercentTop;
@@ -71,6 +73,7 @@ var bottom = y + height;
     }
 
     private double _yPercentBottom;
+
     public double YPercentBottom
     {
         get => _yPercentBottom;
@@ -130,12 +133,16 @@ var bottom = y + height;
 
     private const int MinutesPerDay = 1440;
 
+
     private async Task Save()
     {
         await _persistence.Save(Day!);
     }
 
-
-    public TimeEntryMenu Menu { get; set; }
+    private async Task TimeEntryCommitted()
+    {
+        await Save();
+        StateHasChanged();
+    }
 
 }
