Implement IDisposable when we have a Dispose method

--- a/src/TimeyWimey/TimeRegistration/EntryTimeDraggable.razor
+++ b/src/TimeyWimey/TimeRegistration/EntryTimeDraggable.razor
@@ -3,6 +3,7 @@
 @using System.Text.Json.Serialization
 @inject IMouseService _mouseService;
 @inject IJSRuntime _jsRuntime;
+@implements IDisposable;
 
 <g cursor="ns-resize" @onmousedown="OnDown" @onmousedown:stopPropagation="true"
    transform="translate(@_x, @_y)">
